Introduction to virtual threads which are better choose in case when we need to work with IO operations